clean the notebooks and update report

--- a/data-cleaning-notebook.ipynb
+++ b/data-cleaning-notebook.ipynb
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "tags": []
    },
@@ -100,12 +100,12 @@
    "source": [
     "### Salary parsing\n",
     "\n",
-    "The \"Salary Estimate\" was retrived as object (e.g. $78K-$133K (Glassdoor est.)). I removed  \"$\", \"K\", \"-\" and \"(Glassdoor est.)\" and only left numerical values. The salary information    will be represented by \"max_salary\", \"min_salary\" and \"avg_salary\"."
+    "The \"Salary Estimate\" was retrived as object (e.g. \\$78K-\\$133K (Glassdoor est.)). I removed  \"$\", \"K\", \"-\" and \"(Glassdoor est.)\" and only left numerical values. The salary information    will be represented by \"max_salary\", \"min_salary\" and \"avg_salary\"."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {
     "tags": []
    },
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,30 +161,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "# remove rating from company name column\n",
     "df[\"company_text\"] = df.apply(lambda x: x[\"Company Name\"] if x[\"Rating\"] < 0 else x[\"Company Name\"][:-4], axis= 1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": "Amazon                    22\nAstraZeneca               17\nMITRE                     14\nPfizer                    11\nAscension                 10\n                          ..\nNextdoor                   1\nChan Zuckerberg Biohub     1\nEcolab                     1\nEntefy                     1\nOneTrust                   1\nName: company_text, Length: 488, dtype: int64"
-     },
-     "metadata": {},
-     "execution_count": 12
-    }
-   ],
-   "source": [
-    "df[\"company_text\"].value_counts()"
    ]
   },
   {
@@ -198,28 +180,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": "CA               254\nVA               130\nNY                89\nMA                83\nMD                53\nDC                45\nIL                39\nRemote            33\nTX                30\nUnited States     27\nWA                24\nFL                24\nNJ                23\nPA                16\nMO                12\nNC                12\nCT                10\nOH                10\nVirginia           8\nWI                 7\nOR                 6\nCO                 6\nMI                 6\nUT                 5\nSC                 5\nGA                 5\nKS                 4\nMassachusetts      4\nAL                 4\nID                 3\nIN                 3\nUtah               3\nTN                 3\nDE                 3\nOhio               1\nHI                 1\nNew Jersey         1\nNM                 1\nAZ                 1\nMN                 1\nAR                 1\nMaryland           1\nCalifornia         1\nWY                 1\nKY                 1\nName: job_state, dtype: int64"
-     },
-     "metadata": {},
-     "execution_count": 14
-    }
-   ],
+   "outputs": [],
    "source": [
     "# remove city info from the column\n",
     "df[\"job_state\"] = df[\"Location\"].apply(lambda x: x.split(\",\")[1].strip() if \",\" in x else x)\n",
-    "df[\"job_state\"].value_counts()\n",
     "# Some location cells are extracted in different formats (e.g. Virginia, United States...)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,26 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": "CA        255\nVA        138\nNY         89\nMA         87\nMD         54\nDC         45\nIL         39\nRemote     33\nTX         30\nUS         27\nFL         24\nNJ         24\nWA         24\nPA         16\nNC         12\nMO         12\nOH         11\nCT         10\nUT          8\nWI          7\nCO          6\nOR          6\nMI          6\nGA          5\nSC          5\nAL          4\nKS          4\nIN          3\nID          3\nTN          3\nDE          3\nAZ          1\nWY          1\nAR          1\nMN          1\nNM          1\nHI          1\nKY          1\nName: job_state, dtype: int64"
-     },
-     "metadata": {},
-     "execution_count": 17
-    }
-   ],
-   "source": [
-    "# check\n",
-    "df[\"job_state\"].value_counts()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -276,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -285,21 +238,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "-1     143\n 8      39\n 26     39\n 9      36\n 10     34\n      ... \n 80      1\n 83      1\n 0       1\n 61      1\n 63      1\nName: age, Length: 110, dtype: int64"
+      "text/plain": "143"
      },
      "metadata": {},
-     "execution_count": 22
+     "execution_count": 20
     }
    ],
    "source": [
     "# -1 means missing value, and we can see 143 companies did not report such information\n",
-    "df[\"age\"].value_counts()"
+    "df[\"age\"][df[\"age\"]== -1].count()"
    ]
   },
   {
