--- a/exploratory data analysis.ipynb
+++ b/exploratory data analysis.ipynb
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -129,7 +129,7 @@
       "text/plain": "data scientist               667\ndata analyst                 136\ndata engineer                 71\nna                            67\nmachine learning engineer     46\nmanager                       11\ndirector                       2\nName: job_simplified, dtype: int64"
      },
      "metadata": {},
-     "execution_count": 8
+     "execution_count": 5
     }
    ],
    "source": [
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -158,7 +158,7 @@
       "text/plain": "na        814\nsenior    176\njunior     10\nName: seniority, dtype: int64"
      },
      "metadata": {},
-     "execution_count": 11
+     "execution_count": 7
     }
    ],
    "source": [
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -205,7 +205,7 @@
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Rating</th>\n      <th>Founded</th>\n      <th>Competitors</th>\n      <th>min_salary</th>\n      <th>max_salary</th>\n      <th>avg_salary</th>\n      <th>age</th>\n      <th>python_y/n</th>\n      <th>r_y/n</th>\n      <th>spark_y/n</th>\n      <th>aws_y/n</th>\n      <th>excel_y/n</th>\n      <th>sas_y/n</th>\n      <th>matlab_y/n</th>\n      <th>tableau_y/n</th>\n      <th>tensorflow_y/n</th>\n      <th>description_length</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>count</th>\n      <td>1000.000000</td>\n      <td>1000.000000</td>\n      <td>1000.0</td>\n      <td>1000.000000</td>\n      <td>1000.000000</td>\n      <td>1000.000000</td>\n      <td>1000.000000</td>\n      <td>1000.000000</td>\n      <td>1000.000000</td>\n      <td>1000.000000</td>\n      <td>1000.000000</td>\n      <td>1000.000000</td>\n      <td>1000.000000</td>\n      <td>1000.000000</td>\n      <td>1000.000000</td>\n      <td>1000.00000</td>\n      <td>1000.000000</td>\n    </tr>\n    <tr>\n      <th>mean</th>\n      <td>3.655000</td>\n      <td>1698.493000</td>\n      <td>-1.0</td>\n      <td>86.142000</td>\n      <td>135.506000</td>\n      <td>110.824000</td>\n      <td>32.361000</td>\n      <td>0.666000</td>\n      <td>0.010000</td>\n      <td>0.188000</td>\n      <td>0.233000</td>\n      <td>0.503000</td>\n      <td>0.167000</td>\n      <td>0.075000</td>\n      <td>0.201000</td>\n      <td>0.13900</td>\n      <td>3717.098000</td>\n    </tr>\n    <tr>\n      <th>std</th>\n      <td>1.134541</td>\n      <td>695.722682</td>\n      <td>0.0</td>\n      <td>24.416265</td>\n      <td>32.365313</td>\n      <td>27.533818</td>\n      <td>42.336853</td>\n      <td>0.471876</td>\n      <td>0.099549</td>\n      <td>0.390908</td>\n      <td>0.422954</td>\n      <td>0.500241</td>\n      <td>0.373162</td>\n      <td>0.263523</td>\n      <td>0.400949</td>\n      <td>0.34612</td>\n      <td>1652.112303</td>\n    </tr>\n    <tr>\n      <th>min</th>\n      <td>-1.000000</td>\n      <td>-1.000000</td>\n      <td>-1.0</td>\n      <td>38.000000</td>\n      <td>74.000000</td>\n      <td>56.000000</td>\n      <td>-1.000000</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n      <td>0.00000</td>\n      <td>22.000000</td>\n    </tr>\n    <tr>\n      <th>25%</th>\n      <td>3.400000</td>\n      <td>1939.000000</td>\n      <td>-1.0</td>\n      <td>65.000000</td>\n      <td>112.000000</td>\n      <td>88.500000</td>\n      <td>7.000000</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n      <td>0.00000</td>\n      <td>2645.000000</td>\n    </tr>\n    <tr>\n      <th>50%</th>\n      <td>3.900000</td>\n      <td>1994.000000</td>\n      <td>-1.0</td>\n      <td>86.000000</td>\n      <td>128.000000</td>\n      <td>107.500000</td>\n      <td>18.000000</td>\n      <td>1.000000</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n      <td>1.000000</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n      <td>0.00000</td>\n      <td>3543.000000</td>\n    </tr>\n    <tr>\n      <th>75%</th>\n      <td>4.200000</td>\n      <td>2009.000000</td>\n      <td>-1.0</td>\n      <td>105.000000</td>\n      <td>160.000000</td>\n      <td>130.500000</td>\n      <td>44.000000</td>\n      <td>1.000000</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n      <td>1.000000</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n      <td>0.00000</td>\n      <td>4510.000000</td>\n    </tr>\n    <tr>\n      <th>max</th>\n      <td>5.000000</td>\n      <td>2020.000000</td>\n      <td>-1.0</td>\n      <td>135.000000</td>\n      <td>215.000000</td>\n      <td>175.000000</td>\n      <td>236.000000</td>\n      <td>1.000000</td>\n      <td>1.000000</td>\n      <td>1.000000</td>\n      <td>1.000000</td>\n      <td>1.000000</td>\n      <td>1.000000</td>\n      <td>1.000000</td>\n      <td>1.000000</td>\n      <td>1.00000</td>\n      <td>18659.000000</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
      "metadata": {},
-     "execution_count": 10
+     "execution_count": 9
     }
    ],
    "source": [
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -223,7 +223,7 @@
       "text/plain": "Index(['Job Title', 'Salary Estimate', 'Job Description', 'Rating',\n       'Company Name', 'Location', 'Size', 'Founded', 'Type of ownership',\n       'Industry', 'Sector', 'Revenue', 'Competitors', 'min_salary',\n       'max_salary', 'avg_salary', 'company_text', 'job_state', 'age',\n       'python_y/n', 'r_y/n', 'spark_y/n', 'aws_y/n', 'excel_y/n', 'sas_y/n',\n       'matlab_y/n', 'tableau_y/n', 'tensorflow_y/n', 'job_simplified',\n       'seniority', 'description_length'],\n      dtype='object')"
      },
      "metadata": {},
-     "execution_count": 11
+     "execution_count": 10
     }
    ],
    "source": [
@@ -455,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -775,7 +775,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -785,7 +785,7 @@
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th></th>\n      <th>avg_salary</th>\n    </tr>\n    <tr>\n      <th>job_simplified</th>\n      <th>seniority</th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>manager</th>\n      <th>na</th>\n      <td>132.125000</td>\n    </tr>\n    <tr>\n      <th>data engineer</th>\n      <th>senior</th>\n      <td>125.500000</td>\n    </tr>\n    <tr>\n      <th>na</th>\n      <th>senior</th>\n      <td>124.166667</td>\n    </tr>\n    <tr>\n      <th>data scientist</th>\n      <th>junior</th>\n      <td>123.650000</td>\n    </tr>\n    <tr>\n      <th>data analyst</th>\n      <th>senior</th>\n      <td>118.987179</td>\n    </tr>\n    <tr>\n      <th>data scientist</th>\n      <th>senior</th>\n      <td>114.481308</td>\n    </tr>\n    <tr>\n      <th>na</th>\n      <th>na</th>\n      <td>111.801724</td>\n    </tr>\n    <tr>\n      <th>machine learning engineer</th>\n      <th>na</th>\n      <td>110.447368</td>\n    </tr>\n    <tr>\n      <th>data scientist</th>\n      <th>na</th>\n      <td>109.402727</td>\n    </tr>\n    <tr>\n      <th>data analyst</th>\n      <th>na</th>\n      <td>109.020619</td>\n    </tr>\n    <tr>\n      <th>data engineer</th>\n      <th>na</th>\n      <td>107.631148</td>\n    </tr>\n    <tr>\n      <th>manager</th>\n      <th>senior</th>\n      <td>99.666667</td>\n    </tr>\n    <tr>\n      <th>machine learning engineer</th>\n      <th>senior</th>\n      <td>97.750000</td>\n    </tr>\n    <tr>\n      <th>director</th>\n      <th>na</th>\n      <td>96.750000</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
      "metadata": {},
-     "execution_count": 23
+     "execution_count": 12
     }
    ],
    "source": [
@@ -795,22 +795,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "                          avg_salary\njob_state job_simplified            \nCA        data scientist         180\nVA        data scientist         106\nNY        data scientist          66\nMA        data scientist          63\nDC        data scientist          38\n...                              ...\nNY        na                       1\nOH        na                       1\nPA        data engineer            1\nRemote    manager                  1\nWY        data analyst             1\n\n[105 rows x 1 columns]",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th></th>\n      <th>avg_salary</th>\n    </tr>\n    <tr>\n      <th>job_state</th>\n      <th>job_simplified</th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>CA</th>\n      <th>data scientist</th>\n      <td>180</td>\n    </tr>\n    <tr>\n      <th>VA</th>\n      <th>data scientist</th>\n      <td>106</td>\n    </tr>\n    <tr>\n      <th>NY</th>\n      <th>data scientist</th>\n      <td>66</td>\n    </tr>\n    <tr>\n      <th>MA</th>\n      <th>data scientist</th>\n      <td>63</td>\n    </tr>\n    <tr>\n      <th>DC</th>\n      <th>data scientist</th>\n      <td>38</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <th>...</th>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>NY</th>\n      <th>na</th>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>OH</th>\n      <th>na</th>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>PA</th>\n      <th>data engineer</th>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>Remote</th>\n      <th>manager</th>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>WY</th>\n      <th>data analyst</th>\n      <td>1</td>\n    </tr>\n  </tbody>\n</table>\n<p>105 rows × 1 columns</p>\n</div>"
+      "text/plain": "                          avg_salary\njob_state job_simplified            \nCA        data scientist         180\nVA        data scientist         106\nNY        data scientist          66\nMA        data scientist          63\nDC        data scientist          38",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th></th>\n      <th>avg_salary</th>\n    </tr>\n    <tr>\n      <th>job_state</th>\n      <th>job_simplified</th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>CA</th>\n      <th>data scientist</th>\n      <td>180</td>\n    </tr>\n    <tr>\n      <th>VA</th>\n      <th>data scientist</th>\n      <td>106</td>\n    </tr>\n    <tr>\n      <th>NY</th>\n      <th>data scientist</th>\n      <td>66</td>\n    </tr>\n    <tr>\n      <th>MA</th>\n      <th>data scientist</th>\n      <td>63</td>\n    </tr>\n    <tr>\n      <th>DC</th>\n      <th>data scientist</th>\n      <td>38</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
      "metadata": {},
-     "execution_count": 29
+     "execution_count": 13
     }
    ],
    "source": [
     "# avg salary for different states and job titles\n",
-    "pd.pivot_table(df, index= [\"job_state\", \"job_simplified\"], values= \"avg_salary\", aggfunc=\"count\").sort_values(by= \"avg_salary\", ascending= False)"
+    "pd.pivot_table(df, index= [\"job_state\", \"job_simplified\"], values= \"avg_salary\", aggfunc=\"count\").sort_values(by= \"avg_salary\", ascending= False).head()"
    ]
   },
   {
