--- a/model building.ipynb
+++ b/model building.ipynb
@@ -122,40 +122,20 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": "3.900    79\n4.400    78\n4.100    72\n4.000    72\n3.800    70\n3.700    67\n3.200    55\n3.500    48\n3.655    44\n3.600    43\n4.200    43\n3.300    40\n3.400    40\n4.500    39\n5.000    29\n4.300    28\n3.100    27\n4.600    22\n3.000    18\n4.800    17\n4.700    15\n2.800    13\n4.900    12\n2.900     9\n2.700     7\n2.400     6\n2.500     5\n2.200     1\n2.000     1\nName: Rating, dtype: int64"
-     },
-     "metadata": {},
-     "execution_count": 5
-    }
-   ],
+   "outputs": [],
    "source": [
     "# replace \"-1\" in rating column with the average of rating\n",
-    "df_dum[\"Rating\"].replace(-1.0, np.mean(df_dum[\"Rating\"]), inplace= True)\n",
-    "df_dum[\"Rating\"].value_counts()"
+    "df_dum[\"Rating\"].replace(-1.0, np.mean(df_dum[\"Rating\"]), inplace= True)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": "32.361     143\n26.000      39\n8.000       39\n9.000       36\n10.000      34\n          ... \n0.000        1\n57.000       1\n61.000       1\n80.000       1\n158.000      1\nName: age, Length: 110, dtype: int64"
-     },
-     "metadata": {},
-     "execution_count": 6
-    }
-   ],
+   "outputs": [],
    "source": [
     "# replace \"-1\" in age column with the average of age\n",
-    "df_dum[\"age\"].replace(-1, np.mean(df_dum[\"age\"]), inplace= True)\n",
-    "df_dum[\"age\"].value_counts()"
+    "df_dum[\"age\"].replace(-1, np.mean(df_dum[\"age\"]), inplace= True)"
    ]
   },
   {
